src/app/add-expense/page.css
body {
  background: linear-gradient(
    135deg,
    #f0f4fe,
    #f7effd 25%,
    #fecfdf 75%,
    #fff7ee 100%
  );
}

main#expensePage {
  padding: 2rem;
  padding-bottom: 4rem;
  overflow-x: scroll;
}

.section .filter {
  right: 10em;
}

.section:has(.recurringEdit) .filter,
.section:has(.expenseEdit) .filter {
  display: none;
}

.headerWrapper {
  display: flex;
  justify-content: space-between;
}

.editIcon {
  outline: 2px solid #323232;
  padding: 5px 1px 1px 5px;
  position: absolute;
  left: calc(100% - 12px);
  top: 6px;
  border-radius: 20px;
  background-color: #fff;
  display: flex;
  cursor: pointer;
  opacity: 0;
}

.section > table#expenseTable tr:hover .editIcon {
  opacity: 1;
}

.saveBudgetContainer,
.saveRecurrenceContainer,
.editContainer {
  background: linear-gradient(122deg, #467af8, #9c32e2, #ff2955, #ffb15a);
  padding: 2px;
  width: fit-content;
  border-radius: 20px;
  cursor: pointer;
}

.section > table#expenseTable tr:has(td.recurringEdit) div.rightSideInputs,
.section > table#expenseTable tr:has(td.expenseEdit) div.rightSideInputs,
.section
  > table#expenseTable
  tr:has(td.recurringEdit)
  div.rightSideInputs
  .saveRecurrenceContainer,
.section
  > table#expenseTable
  tr:has(td.expenseEdit)
  div.rightSideInputs
  .editContainer {
  outline: none;
  padding: 1px;
}

.section > table#expenseTable tr:has(td.recurringEdit) div.rightSideInputs,
.section > table#expenseTable tr:has(td.expenseEdit) div.rightSideInputs {
  position: absolute;
  left: calc(100% + 1em);
  top: 5px;
  display: flex;
  gap: 0.5em;
  width: max-content;
}

.section
  > table#expenseTable
  tr:has(td.recurringEdit)
  div.saveRecurrenceContainer
  .saveRecurrence.save,
.section
  > table#expenseTable
  tr:has(td.expenseEdit)
  div.editContainer
  .saveExpense.save {
  outline: none;
  padding: 4px 12px;
}

.section
  > table#expenseTable
  tr:has(td.recurringEdit)
  div.saveRecurrenceContainer
  .saveRecurrence.close,
.section
  > table#expenseTable
  tr:has(td.expenseEdit)
  div.editContainer
  .saveExpense.close {
  outline: none;
  padding: 4px 8px;
}

.saveBudget,
.saveRecurrence,
.saveExpense {
  background: linear-gradient(122deg, #f0f4fe, #f7effd, #fecfdf, #fff7ee);
  padding: 8px 12px;
  border-radius: 20px;
}

.saveBudget:hover,
.saveRecurrence:hover,
.saveExpense:hover {
  background: #fff;
}

.section
  > table#expenseTable
  tr:has(td.recurringEdit)
  div.saveRecurrenceContainer
  .saveRecurrenceButton,
.section > table#expenseTable .saveExpenseButton {
  font-weight: 600;
}

.saveBudgetButton,
.saveRecurrenceButton,
.saveExpenseButton {
  font-size: 1em;
  font-weight: 800;
  background: linear-gradient(122deg, #467af8, #9c32e2, #ff2955, #ffb15a);
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.monthTitle {
  font-size: 1.8em;
  font-weight: 600;
}

.expenseColumns {
  display: flex;
}

.summaryWrapper {
  background-color: #ffffff91;
  padding: 1em;
  padding-right: 1.5em;
  border-radius: 20px;
  height: fit-content;
}

.section {
  padding: 1.5em 10em 1.5em 2.5em;
  border-radius: 20px;
  position: relative;
}

.section > h2,
#summaryIncome > h2,
#summarySavings > h2,
#summaryExpense > h2 {
  font-size: 1.2em;
  font-weight: 500;
  margin-bottom: 10px;
}

#summarySavings > h2,
#summaryExpense > h2 {
  margin-top: 40px;
}

span.summaryProgressBar {
  display: flex;
  justify-content: space-between;
  margin-bottom: 4px;
}

.summaryProgressBar span {
  display: flex;
  justify-content: space-between;
  position: relative;
  top: 0;
  width: 250px;
  gap: 2px;
}

.summaryProgressBar #progressMonthly,
.summaryProgressBar #progressBudget {
  border: 2px solid;
  padding: 3px;
  z-index: 1;
  display: flex;
  height: 28px;
}

.summaryProgressBar #progressBudget {
  background-color: #fff;
  text-align: end;
  z-index: 0;
}

.summaryProgressBar #progressMonthly p,
.summaryProgressBar #progressBudget p,
.categoryName {
  background-color: #fff;
  border-radius: 20px;
  font-size: 0.8em;
  width: fit-content;
}

.categoryName {
  padding: 4px 8px;
  margin-right: 4px;
}

.summaryProgressBar #progressMonthly p,
.summaryProgressBar #progressBudget p {
  position: absolute;
  padding: 1px 6px;
  font-weight: 700;
}

.summaryProgressBar #progressMonthly p {
  color: #323232;
}

.summaryProgressBar #progressBudget p {
  right: 6px;
}

.summaryProgressBar #progressMonthly.overBudgetMonthly {
  border-right: none;
}

.summaryProgressBar #progressBudget.overBudgetProgress {
  border-left: none;
  margin-left: -2px;
}

#expenseTable
  tr
  td:first-child
  span:first-child
  .recurringIcon
  #recurringBackground {
  fill: #fae5f4;
}

#expenseTable tr td div.recurringInput .recurringIcon #recurringBackground {
  fill: #fff;
}

#expenseTable tr td div.recurringInput SVG.recurringIcon {
  width: 18px;
  height: 18px;
  margin-top: 2px;
}

#expenseTable tr td div.recurringInput span {
  margin-left: auto;
}

#expenseTable tr td:first-child span:first-child .recurringIcon {
  position: absolute;
  left: -30px;
  opacity: 0.25;
}

#expenseTable tr td:first-child span:first-child .recurringIcon,
#expenseTable tr td div.recurringInput.inactive .recurringIcon,
#expenseTable tr td div.recurringInput.active .recurringIcon:hover {
  opacity: 0.25;
}

.section > table#expenseTable tr td div.recurringInput.inactive {
  border: none;
  outline: none;
}

.section > table#expenseTable tr td div.recurringInput .hideIcon #recurringR,
.section
  > table#expenseTable
  tr
  td
  div.recurringInput
  .hideIcon
  #recurringArrows {
  fill: none;
}

#expenseTable tr td:first-child span:first-child .recurringIcon:hover,
#expenseTable tr td.recurringActive:first-child span:first-child .recurringIcon,
#expenseTable tr td div.recurringInput .recurringIcon:hover {
  opacity: 1;
}

#AddExpenseBar {
  padding: 8px;
  margin: 0 2em;
  border-radius: 50px;
  background-color: #fff;
  z-index: 99;
}
/* ... */

